2006-07-24 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j98-UNSTABLE

 * Adjust bars002 skin -> 1.6

 * Little layot changes in templates.
 
2006-07-24 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j97-UNSTABLE

 * Switched rows and columns in album properties.

 * CHANGE: Removed Support for:  $_SERVER['HTTP_HOST'] in css files 

2006-07-24 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j96-UNSTABLE

 * Fix: ZLORIFX == vs. ===, using strcmp() now in drawselect.

2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j95-UNSTABLE

 ***** CHANGE *****
 
 Removed following skins:
	bblue
	bgreen
	bgreen2
	bluemod
	bpurple
	greenpurple
	paint
	redmarble

2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j94-UNSTABLE

 ***** NEW ******

 * Mainpage is now themeable.
 
2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j93-UNSTABLE

 * Hide RandomBlock Source in setup as its currently unused.

 * CSS things in Setup.

 * Make some Texts tranlateable

 * Some layout and wording things.

2006-07-23 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j92-UNSTABLE

 * Fix: Popup for frames didnt work in frames for randomblock.

2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j91-UNSTABLE

 * Fix: drawSelect in slideshow misbehaved and selected the wrong.
 
 * Use Horde Browser in slideshow to avoid document.write()
   As a result drawSelect() uses now always pretty printing.

 * drawSelect() now also uses always pretty printing.

 * Found _() -> gTranslate()

2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j90-UNSTABLE

 * Added new icons for navigation

 * Converted a couple of png icons to gif icons (DARN IE !)

2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j89-UNSTABLE

 * Added icons for notice messages.

2006-07-21 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j88-UNSTABLE

 * Removed $class param from gInput

 * Little layout changes

2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j87-UNSTABLE

 * Change: Splitted Add_URL into "URL" and "from local Server"

 * NEW: Added YAHOO! YUI , AJAX Autocomplete.