@@ -1,3 +1,11 @@
+2006-07-25 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j99-UNSTABLE
+
+ * Change: Remove param $size in gInput(), now handled via $attrs
+
+ * Changed some " to '
+
+ * Little layout fix in popups/edit_appearance.php
+
 2006-07-24 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j98-UNSTABLE
 
  * Adjust bars002 skin -> 1.6
